added captcha validation in backend

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ FRONTEND_URL=http://localhost:3000
 PORT=8080
 SECRET=smartSchool@42
 RESET_SECRET=resetSchool@42
+CAPTCHA_KEY=6LeCtSorAAAAAJ0Kji45OSUegdAueDiKHWsVE-zH
