--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ PORT=8080
 FRONTEND_URL=http://localhost:3000
 SECRET=smartSchool@42
 RESET_SECRET=resetSchool@42
+CAPTCHA_KEY=6LeCtSorAAAAAJ0Kji45OSUegdAueDiKHWsVE-zH
